--- a/rmf_demos/config/domodedovo/tinyRobot_config.yaml
+++ b/rmf_demos/config/domodedovo/tinyRobot_config.yaml
@@ -45,7 +45,91 @@ rmf_fleet:
 
     tinyRobot3:
         charger: "tinyRobot3_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot4:
+        charger: "tinyRobot4_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot5:
+        charger: "tinyRobot5_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot6:
+        charger: "tinyRobot6_charger"
         responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting. 
+
+    tinyRobot7:
+        charger: "tinyRobot7_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot8:
+        charger: "tinyRobot8_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+   
+    tinyRobot9:
+        charger: "tinyRobot9_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot10:
+        charger: "tinyRobot10_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting. 
+
+    tinyRobot11:
+        charger: "tinyRobot11_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot12:
+        charger: "tinyRobot12_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot13:
+        charger: "tinyRobot13_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot14:
+        charger: "tinyRobot14_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting. 
+
+    tinyRobot15:
+        charger: "tinyRobot15_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot16:
+        charger: "tinyRobot16_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+    
+    tinyRobot17:
+        charger: "tinyRobot17_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot18:
+        charger: "tinyRobot18_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting. 
+
+    tinyRobot19:
+        charger: "tinyRobot19_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot20:
+        charger: "tinyRobot20_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot21:
+        charger: "tinyRobot21_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot22:
+        charger: "tinyRobot22_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting. 
+
+    tinyRobot23:
+        charger: "tinyRobot23_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot24:
+        charger: "tinyRobot24_charger"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
 fleet_manager:
   ip: "127.0.0.1"
   port: 22011
