--- a/rmf_demos/config/domodedovo/tinyRobot_config.yaml
+++ b/rmf_demos/config/domodedovo/tinyRobot_config.yaml
@@ -30,7 +30,7 @@ rmf_fleet:
     loop: True
     delivery: True
     patrol: True
-  actions: ["teleop", "manual_control"]
+  actions: ["teleop", "manual_control", "tray_identification", "move_to", "jacking", "laser_back", "drop"]
   finishing_request: "charge" # [park, charge, nothing]
   responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
   reassign_task_interval: 120 # seconds, specify how often a task reassignment should be triggered in the fleet
