test traffic map

--- a/rmf_demos_maps/maps/domodedovo/domodedovo.building.yaml
+++ b/rmf_demos_maps/maps/domodedovo/domodedovo.building.yaml
@@ -53,53 +53,53 @@ levels:
     layers:
       {}
     vertices:
-      - [39.557000000000002, 106.46899999999999, 0, tinyRobot23_charger, {dock_name: [1, dock_23], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot23], spawn_robot_type: [1, TinyRobot]}]
-      - [460.47899999999998, 110.672, 0, tinyRobot11_charger, {dock_name: [1, dock_11], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot11], spawn_robot_type: [1, TinyRobot]}]
+      - [39.557000000000002, 106.46899999999999, 0, dock_23, {dock_name: [1, dock_23], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot23], spawn_robot_type: [1, TinyRobot]}]
+      - [460.47899999999998, 110.672, 0, dock_11, {dock_name: [1, dock_11], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot11], spawn_robot_type: [1, TinyRobot]}]
       - [62.668999999999997, 108.571, 0, ""]
-      - [64.769999999999996, 20.324000000000002, 0, tinyRobot1_charger, {dock_name: [1, dock_1], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot1], spawn_robot_type: [1, TinyRobot]}]
+      - [64.769999999999996, 20.324000000000002, 0, dock_1, {dock_name: [1, dock_1], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot1], spawn_robot_type: [1, TinyRobot]}]
       - [121.5, 108.571, 0, ""]
-      - [123.601, 23.826000000000001, 0, tinyRobot2_charger, {dock_name: [1, dock_2], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot2], spawn_robot_type: [1, TinyRobot]}]
+      - [123.601, 23.826000000000001, 0, dock_2, {dock_name: [1, dock_2], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot2], spawn_robot_type: [1, TinyRobot]}]
       - [173.328, 109.971, 0, ""]
-      - [176.12899999999999, 22.425000000000001, 0, tinyRobot3_charger, {dock_name: [1, dock_3], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot3], spawn_robot_type: [1, TinyRobot]}]
+      - [176.12899999999999, 22.425000000000001, 0, dock_3, {dock_name: [1, dock_3], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot3], spawn_robot_type: [1, TinyRobot]}]
       - [227.256, 109.271, 0, ""]
-      - [227.95599999999999, 24.526, 0, tinyRobot4_charger, {dock_name: [1, dock_4], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot4], spawn_robot_type: [1, TinyRobot]}]
+      - [227.95599999999999, 24.526, 0, dock_4, {dock_name: [1, dock_4], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot4], spawn_robot_type: [1, TinyRobot]}]
       - [285.387, 112.072, 0, ""]
-      - [286.08699999999999, 24.526, 0, tinyRobot5_charger, {dock_name: [1, dock_5], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot5], spawn_robot_type: [1, TinyRobot]}]
+      - [286.08699999999999, 24.526, 0, dock_5, {dock_name: [1, dock_5], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot5], spawn_robot_type: [1, TinyRobot]}]
       - [343.517, 109.971, 0, ""]
-      - [346.31900000000002, 24.526, 0, tinyRobot6_charger, {dock_name: [1, dock_6], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot6], spawn_robot_type: [1, TinyRobot]}]
+      - [346.31900000000002, 24.526, 0, dock_6, {dock_name: [1, dock_6], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot6], spawn_robot_type: [1, TinyRobot]}]
       - [393.24299999999999, 110.672, 0, ""]
-      - [393.94400000000002, 25.227, 0, tinyRobot7_charger, {dock_name: [1, dock_7], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot7], spawn_robot_type: [1, TinyRobot]}]
+      - [393.94400000000002, 25.227, 0, dock_7, {dock_name: [1, dock_7], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot7], spawn_robot_type: [1, TinyRobot]}]
       - [439.46800000000002, 110.672, 0, ""]
-      - [439.46800000000002, 28.027999999999999, 0, tinyRobot8_charger, {dock_name: [1, dock_8], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot8], spawn_robot_type: [1, TinyRobot]}]
+      - [439.46800000000002, 28.027999999999999, 0, dock_8, {dock_name: [1, dock_8], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot8], spawn_robot_type: [1, TinyRobot]}]
       - [92.784999999999997, 106.46899999999999, 0, ""]
-      - [92.784999999999997, 199.61799999999999, 0, tinyRobot20_charger, {dock_name: [1, dock_20], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot20], spawn_robot_type: [1, TinyRobot]}]
+      - [92.784999999999997, 199.61799999999999, 0, dock_20, {dock_name: [1, dock_20], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot20], spawn_robot_type: [1, TinyRobot]}]
       - [149.51499999999999, 108.571, 0, ""]
-      - [150.916, 202.41999999999999, 0, tinyRobot19_charger, {dock_name: [1, dock_19], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot19], spawn_robot_type: [1, TinyRobot]}]
+      - [150.916, 202.41999999999999, 0, dock_19, {dock_name: [1, dock_19], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot19], spawn_robot_type: [1, TinyRobot]}]
       - [204.14400000000001, 106.46899999999999, 0, ""]
-      - [206.94499999999999, 204.52099999999999, 0, tinyRobot18_charger, {dock_name: [1, dock_18], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot18], spawn_robot_type: [1, TinyRobot]}]
+      - [206.94499999999999, 204.52099999999999, 0, dock_18, {dock_name: [1, dock_18], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot18], spawn_robot_type: [1, TinyRobot]}]
       - [260.173, 107.87, 0, ""]
-      - [264.37599999999998, 205.221, 0, tinyRobot17_charger, {dock_name: [1, dock_17], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot17], spawn_robot_type: [1, TinyRobot]}]
+      - [264.37599999999998, 205.221, 0, dock_17, {dock_name: [1, dock_17], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot17], spawn_robot_type: [1, TinyRobot]}]
       - [316.90300000000002, 106.46899999999999, 0, ""]
-      - [319.00400000000002, 205.221, 0, tinyRobot16_charger, {dock_name: [1, dock_16], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot16], spawn_robot_type: [1, TinyRobot]}]
+      - [319.00400000000002, 205.221, 0, dock_16, {dock_name: [1, dock_16], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot16], spawn_robot_type: [1, TinyRobot]}]
       - [371.53199999999998, 111.372, 0, ""]
-      - [375.73399999999998, 207.32300000000001, 0, tinyRobot15_charger, {dock_name: [1, dock_15], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot15], spawn_robot_type: [1, TinyRobot]}]
+      - [375.73399999999998, 207.32300000000001, 0, dock_15, {dock_name: [1, dock_15], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot15], spawn_robot_type: [1, TinyRobot]}]
       - [415.65499999999997, 109.271, 0, ""]
-      - [417.75599999999997, 205.221, 0, tinyRobot14_charger, {dock_name: [1, dock_14], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot14], spawn_robot_type: [1, TinyRobot]}]
+      - [417.75599999999997, 205.221, 0, dock_14, {dock_name: [1, dock_14], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot14], spawn_robot_type: [1, TinyRobot]}]
       - [418.45699999999999, 163.90000000000001, 0, ""]
-      - [472.38499999999999, 164.59999999999999, 0, tinyRobot12_charger, {dock_name: [1, dock_12], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot12], spawn_robot_type: [1, TinyRobot]}]
+      - [472.38499999999999, 164.59999999999999, 0, dock_12, {dock_name: [1, dock_12], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot12], spawn_robot_type: [1, TinyRobot]}]
       - [90.683999999999997, 154.095, 0, ""]
-      - [24.149000000000001, 152.69399999999999, 0, tinyRobot22_charger, {dock_name: [1, dock_22], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot22], spawn_robot_type: [1, TinyRobot]}]
+      - [24.149000000000001, 152.69399999999999, 0, dock_22, {dock_name: [1, dock_22], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot22], spawn_robot_type: [1, TinyRobot]}]
       - [92.784999999999997, 183.50999999999999, 0, ""]
-      - [24.149000000000001, 182.10900000000001, 0, tinyRobot21_charger, {dock_name: [1, dock_21], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot21], spawn_robot_type: [1, TinyRobot]}]
+      - [24.149000000000001, 182.10900000000001, 0, dock_21, {dock_name: [1, dock_21], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot21], spawn_robot_type: [1, TinyRobot]}]
       - [418.45699999999999, 189.81299999999999, 0, ""]
-      - [473.786, 191.214, 0, tinyRobot13_charger, {dock_name: [1, dock_13], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot13], spawn_robot_type: [1, TinyRobot]}]
+      - [473.786, 191.214, 0, dock_13, {dock_name: [1, dock_13], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot13], spawn_robot_type: [1, TinyRobot]}]
       - [440.86900000000003, 46.238, 0, ""]
-      - [472.38499999999999, 47.637999999999998, 0, tinyRobot9_charger, {dock_name: [1, dock_9], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot9], spawn_robot_type: [1, TinyRobot]}]
+      - [472.38499999999999, 47.637999999999998, 0, dock_9, {dock_name: [1, dock_9], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot9], spawn_robot_type: [1, TinyRobot]}]
       - [66.171000000000006, 37.832999999999998, 0, ""]
       - [17.846, 36.433, 0, ""]
       - [65.471000000000004, 69.349999999999994, 0, ""]
-      - [17.145, 67.948999999999998, 0, tinyRobot24_charger, {dock_name: [1, dock_24], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot24], spawn_robot_type: [1, TinyRobot]}]
+      - [17.145, 67.948999999999998, 0, dock_24, {dock_name: [1, dock_24], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot24], spawn_robot_type: [1, TinyRobot]}]
       - [440.86900000000003, 77.754000000000005, 0, ""]
-      - [473.786, 79.155000000000001, 0, tinyRobot10_charger, {dock_name: [1, dock_10], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot10], spawn_robot_type: [1, TinyRobot]}]
+      - [473.786, 79.155000000000001, 0, dock_10, {dock_name: [1, dock_10], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot10], spawn_robot_type: [1, TinyRobot]}]
 lifts: {}
 name: new-test
