--- a/rmf_demos/config/office/tinyRobot_config.yaml
+++ b/rmf_demos/config/office/tinyRobot_config.yaml
@@ -29,8 +29,9 @@ rmf_fleet:
   task_capabilities: # Specify the types of RMF Tasks that robots in this fleet are capable of performing
     loop: True
     delivery: True
-  actions: ["teleop"]
-  finishing_request: "park" # [park, charge, nothing]
+    patrol: True
+  actions: ["teleop", "manual_control"]
+  finishing_request: "charge" # [park, charge, nothing]
   responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
   reassign_task_interval: 120 # seconds, specify how often a task reassignment should be triggered in the fleet
   robots:
@@ -115,19 +116,31 @@ rmf_fleet:
         responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
 
     tinyRobot21:
-        charger: "dock_21"
+        charger: "dock_101"
         responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
 
     tinyRobot22:
-        charger: "dock_22"
+        charger: "dock_102"
         responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
 
     tinyRobot23:
-        charger: "dock_23"
+        charger: "dock_103"
         responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
 
     tinyRobot24:
-        charger: "dock_24"
+        charger: "dock_104"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot25:
+        charger: "dock_105"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot26:
+        charger: "dock_106"
+        responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+
+    tinyRobot27:
+        charger: "dock_107"
         responsive_wait: True # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
 
 fleet_manager:
