--- a/rmf_demos_maps/maps/office/office.building.yaml
+++ b/rmf_demos_maps/maps/office/office.building.yaml
@@ -1,7 +1,7 @@
 coordinate_system: reference_image
 crowd_sim:
   agent_groups:
-    - {agents_name: [tinyRobot1, tinyRobot2, tinyRobot6, tinyRobot7, tinyRobot8, tinyRobot9, tinyRobot10, tinyRobot11, tinyRobot12, tinyRobot13, tinyRobot14, tinyRobot15, tinyRobot16, tinyRobot17, tinyRobot18, tinyRobot19, tinyRobot20], agents_number: 20, group_id: 0, profile_selector: external_agent, state_selector: external_static, x: 0, y: 0}
+    - {agents_name: [tinyRobot1, tinyRobot2, tinyRobot6, tinyRobot7, tinyRobot8, tinyRobot9, tinyRobot10, tinyRobot11, tinyRobot12, tinyRobot13, tinyRobot14, tinyRobot15, tinyRobot16, tinyRobot17, tinyRobot18, tinyRobot19, tinyRobot20], agents_number: 17, group_id: 0, profile_selector: external_agent, state_selector: external_static, x: 0, y: 0}
   agent_profiles:
     - {ORCA_tau: 1, ORCA_tauObst: 0.40000000000000002, class: 1, max_accel: 0, max_angle_vel: 0, max_neighbors: 10, max_speed: 0, name: external_agent, neighbor_dist: 5, obstacle_set: 1, pref_speed: 0, r: 0.25}
   enable: 0
@@ -265,7 +265,7 @@ levels:
       - [830.92200000000003, 249.364, 0, presupplies, {is_parking_spot: [4, false]}]
       - [1210.5440000000001, 365.25400000000002, 0, patrol_D2]
       - [1191.442, 824.45699999999999, 0, patrol_A1]
-      - [1232.421, 658.56700000000001, 0, dock_2, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot1], spawn_robot_type: [1, TinyRobot]}]
+      - [1232.421, 658.56700000000001, 0, dock_108, {dock_name: [1, dock_108], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot1], spawn_robot_type: [1, TinyRobot]}]
       - [1991.1210000000001, 812.87199999999996, 0, patrol_D1]
       - [1990, 638.36400000000003, 0, pantry, {is_holding_point: [4, true], is_parking_spot: [4, false], pickup_dispenser: [1, coke_dispenser]}]
       - [2213.636, 812, 0, "", {is_parking_spot: [4, false]}]
@@ -289,7 +289,7 @@ levels:
       - [769.86699999999996, 618.14800000000002, 0, dock_101, {dock_name: [1, dock_101], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot21], spawn_robot_type: [1, TinyRobot]}]
       - [2016.125, 1310.9549999999999, 0, ""]
       - [2468.096, 1217.693, 0, ""]
-      - [2412.5810000000001, 627.5, 0, dock_2, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot2], spawn_robot_type: [1, TinyRobot]}]
+      - [2412.5810000000001, 627.5, 0, dock_109, {dock_name: [1, dock_109], is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobot2], spawn_robot_type: [1, TinyRobot]}]
       - [1255.0239999999999, 824.40300000000002, 0, ""]
       - [2141.6390000000001, 799.18499999999995, 0, ""]
       - [1252.1369999999999, 556.17600000000004, 0, ""]
